apps/20-media/lidarr/overlays/dev/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
spec:
  template:
    spec:
      volumes:
        - name: config-patcher
          configMap:
            name: lidarr-config-patcher
