apps/20-media/lidarr/overlays/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: "web, websecure"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Lidarr"
    gethomepage.dev/icon: "lidarr.png"
    gethomepage.dev/group: "Media"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-global-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: lidarr.dev.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port:
                  number: 8686
  tls:
    - hosts:
        - lidarr.dev.truxonline.com
      secretName: lidarr-tls
